--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r reqiuirements.txt
+          pip install -r requirements.txt
 
       - name: Lint with flake
         run: |
